Главное окно почти закончено
осталось связать с контроллером, а после с UserApplicationActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Technical Support</string>
+    <string name="login__btn_text">Вход</string>
+    <string name="login__text_view">Вход</string>
 </resources>
