Окно с списком заявок почти закончено
функционал окна почти готов, осталось связать с контроллером, чтобы получать данные

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Technical Support</string>
     <string name="login__btn_text">Вход</string>
     <string name="login__text_view">Вход</string>
+    <string name="requests__text_view">Список заявок</string>
+    <string name="create_request_button__text">СОЗДАТЬ ЗАЯВКУ</string>
 </resources>
